[package]
name = "redis_playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-redis = "0.12.0"
actix-web = "4.3.1"
futures-util = "0.3.27"
redis-async = "0.14.2"
serde = {version = "1.0.159", features = ["derive"]}
serde_json = "1.0.95"
sha256 = "1.1.2"
